--- a/README
+++ b/README
@@ -9,3 +9,7 @@ https://github.com/miekg/dns/blob/master/msg.go
 https://github.com/boltdb/bolt#using-keyvalue-pairs
 
 https://github.com/segmentio/kafka-go
+
+ 3480  dig @localhost -p 8053 zenaton-rabbitmq-c1-n3.services.clever-cloud.com
+ 3482  dig @localhost -p 8053dig @localhost -p 8053 zenaton-rabbitmq-c1-n3.services.clever-cloud.com
+ 3483  dig @localhost -p 8053 zenaton-rabbitmq-c1-n3.services.clever-cloud.com
